correct register new user

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,10 +23,10 @@
           <div id="box-1">
             <h5>Notes & Projects</h5>
             <form action="/login" method="post" name="login-form" class="login-form" id="login-form">
-              <input type="text" name="username" id="username" placeholder="username" autocomplete="off" required>
-              <input type="text" name="realname" id="realname" placeholder="your name (to exhibit on screen)" autocomplete="off">
-              <input type="password" name="password" id="password" placeholder="password" required> <br>
-              <input type="password" name="password-confirm" id="password-confirm" placeholder="confirm password" autocomplete="off">
+              <input type="text" name="username" id="username" placeholder="username" autocomplete="off" maxlength="30" autofocus required>
+              <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
+              <input type="password" name="password" id="password" placeholder="password" maxlength="50" required> <br>
+              <input type="password" name="password-confirm" id="password-confirm" placeholder="confirm password" autocomplete="off" required>
               <div class="row-buttons">
                 <button type="button" name="login" id="login">Login</button>
                 <button type="button" form="register-form" name="register" id="register">Register</button>
