--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     background-color: rgb(40,5,60);
 }
 
@@ -60,13 +60,13 @@ h1:hover{
     display: flex;
     justify-content: flex-end;
     width: 40px;
-    color: rgba(240,240,200, 0.7);
+    color: rgba(240,240,206, 0.7);
     font-size: 30px;
 }
 
 #logout-box:hover{
     cursor: pointer;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
 }
 
 .whole-screen{
@@ -84,7 +84,7 @@ h1:hover{
     min-width: 310px;
     max-width: 400px;
     margin-bottom: 2vh;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
 }
 
 #login-box > *{
@@ -123,14 +123,14 @@ p:hover{
 #box-1 h5{
     padding: 5px 0 16px 5%;
     margin: 0;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
 }
 
 #login-form input{
     width: 90%;
     border: none;
     outline: none;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     border-bottom: 1px solid rgb(30,30,120);
     margin: 10px 0;
     background-color: transparent;
@@ -140,7 +140,7 @@ p:hover{
     width: 90%;
     border: none;
     outline: none;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     border-bottom: 1px solid rgb(30,30,120);
     margin: 10px 0;
     background-color: transparent;
@@ -151,7 +151,7 @@ p:hover{
     border: none;
     outline: none;
     padding: 5px 0;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     margin: 15px 0 5px;
 }
 
@@ -160,7 +160,7 @@ p:hover{
     border: none;
     outline: none;
     padding: 5px 0;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     margin: 15px 0 5px;
     background-color: rgb(44,6,60);
 }
@@ -296,8 +296,8 @@ p:hover{
 .specific_next_event{
     height: fit-content;
     align-self: flex-start;
-    background-color: rgba(240,240,200,0.15);
-    border-right: 6px solid rgba(240,240,200,0.3);
+    background-color: rgba(240,240,206,0.15);
+    border-right: 6px solid rgba(240,240,206,0.3);
     padding: 4px 8px;
     margin: 3px 0;
     width: 49%;
@@ -316,7 +316,7 @@ p:hover{
 }
 
 h5{
-    font-weight: lighter;
+    font-weight: 300;
     margin-top: 6px;
     margin-bottom: 16px;
 }
@@ -327,8 +327,6 @@ h5:hover{
 
 #day2_title_container {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
     height: 46px;
     margin: 0;
     padding: 0;
@@ -336,41 +334,47 @@ h5:hover{
 }
 
 #day2 h5{
-    width: 86%;
-    margin: 0 0 16px 0;
-    margin-top: 14px;
+    width: calc(100% - 28px);
+    margin: 14px 0 16px 12px;
     padding: 0;
     border: 0;
-    padding-left: 10%;
 }
 
 #day2 #right_arrow{
-    width: 14%;
-    margin: 0;
+    width: 28px;
+    height: 28px;
+    margin: 11px 12px 0 0;
     padding: 0;
     border: 0;
 }
 
 #datepicker{
     background-color: transparent;
-    color: rgba(240,240,200,0.6);
     text-align: right;
-    font-size: 1.5em;
+    font-size: 1em;
     margin: 0;
     padding: 0;
     border: 0;
-    width: 100%;
-    margin-top: 7px;
-    padding-right: 12px
+    width: 28px;
+    height: 28px;
+    background-image: url(../img/calendar3.svg);
+    background-size:cover;
+    opacity: 0.6;
+    filter: invert(76%);
 }
 
 #datepicker:hover{
     cursor: pointer;
-    color: rgb(240,240,200);
+    opacity: 1;
 }
 
 #datepicker:focus{
     outline: none;
+    opacity: 0.8;
+}
+
+#ui-datepicker-div{
+    filter: invert(94%);
 }
 
 textarea:focus{
@@ -448,7 +452,7 @@ header {
 }
 
 .hour_weather svg{
-    color: rgba(240,240,200, 0.7);
+    color: rgba(240,240,206, 0.7);
 }
 
 .hourly_weather{
@@ -507,12 +511,12 @@ header {
     height: fit-content;
 }
 
-.transparent_square{
+.transparent_squareA{
     width: 85%;
     margin-top: 3px;
     height: 19px;
-    border-bottom: 1px solid rgba(240,240,200, 0.8);
-    border-right: 1px solid rgba(240,240,200, 0.8);
+    border-bottom: 1px solid rgba(240,240,206, 0.8);
+    border-right: 1px solid rgba(240,240,206, 0.8);
     border-radius: 0 0 14px 0;
 }
 
@@ -654,7 +658,7 @@ li:hover{
 }
 
 #add_new_project:hover{
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
 }
 
 #empty_projects-box{
@@ -671,7 +675,7 @@ p{
 }
 
 #empty_projects-box p{
-    color: rgba(240,240,200,0.5);
+    color: rgba(240,240,206,0.5);
     font-size: 2em;
 }
 
@@ -705,7 +709,7 @@ p{
     height: fit-content;
     background-color: rgb(20,20,20);
     border-radius: 15px;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     z-index: 7;
 }
 
@@ -719,7 +723,7 @@ p{
     height: fit-content;
     background-color: rgb(20,20,20);
     border-radius: 15px;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     z-index: 7;
 }
 
@@ -730,7 +734,7 @@ p{
 .project_header{
     display: flex;
     padding: 10px;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     background-color: rgb(0,120,20);
     justify-content: space-around;
     font-size: 1.1em;
@@ -740,7 +744,7 @@ p{
     width: 48%;
     border: none;
     outline: none;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     border-bottom: 1px solid rgb(0,200,30);
     margin: 3px 0;
     background-color: rgb(0,120,20);
@@ -750,7 +754,7 @@ p{
 #new_project_deadline{
     width: 32%;
     border: none;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     background-color: rgb(0,120,20);
     text-align: center;
     font-size: 0.9em;
@@ -767,7 +771,7 @@ p{
 .another_task{
     display: flex;
     padding: 5px 10px;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     justify-content: space-around;
 }
 
@@ -779,7 +783,7 @@ p{
     width: 48%;
     border: none;
     outline: none;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     border-bottom: 1px solid rgb(30,30,120);
     background-color: transparent;
 }
@@ -788,7 +792,7 @@ p{
     width: 32%;
     background-color: rgb(20,20,20);
     border: none;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     text-align: center;
     outline: none;
     font-size: 0.9em;
@@ -802,7 +806,7 @@ input {
     width: 17%;
     background-color: rgb(6,20,80);
     border: none;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
 }
 
 #deadlines_span{
@@ -818,7 +822,7 @@ input {
     border: none;
     outline: none;
     padding: 4px 0 6px;
-    color: rgb(240,240,200);
+    color: rgb(240,240,206);
     margin: 15px 10px 10px;
     background-color: rgb(44,6,60);
 }
@@ -1133,6 +1137,7 @@ input {
     .shade_project_box{
         height: 300vh;
     }
+
 }
 
 @media (min-width: 975px) {
