--- a/views/index.ejs
+++ b/views/index.ejs
@@ -723,71 +723,70 @@
           
           <div class="row text-center row-days dayC" id="projects_section">
             <div id="projects-container">
-              <%let projects_PH = JSON.parse(projects_PH_str)%>
-              <%if (projects_PH.length < 1){%>
+              <%let projects = JSON.parse(projects_PH_str)%>
+              <%if (projects.length < 1){%>
                 <div id="empty_projects-box">
                   <p>PROJECTS AREA</p>
                 </div>
                 <%} else{%>
                   <div class="projects-box">
-                    <%for (m = 0; m < projects_PH.length; m++){%>
-                      
+                    <%for (m = 0; m < projects.length; m++){%>                      
                       <div class="project" id="project<%=m%>">
-                        <p class="project_title"> <%=projects_PH[m].title%> </p>
+                        <p class="project_title"> <%=projects[m].title%> </p>
                         <div class="tasks">
-                          <%if (projects_PH[m]["tasks_done"].length > 0){%>
-                          <%let buffer_proj_m = projects_PH[m]["tasks_done"];%>                            
-                          <%for (o = 0; o < buffer_proj_m.length; o++){%>
-                          <div class="task_with_lines">
-                            <hr class="done_line line">
-                            <div class="specific_task done">
-                              <div class="obs-box">
-                                <div class="obs-header">
-                                  <h4 class="obs-title">Observations</h4>
-                                  <button class="obs-save-button">SAVE</button>
+                          <%if(projects[m]["tasks_done"].length){%>
+                            <%let done=projects[m]["tasks_done"];%>
+                            <%for(let e = 0; e < done.length; e++){%>
+                              <div class="task_with_lines">
+                                <hr class="done_line line">
+                                <div class="specific_task done">
+                                  <div class="obs-box">
+                                    <div class="obs-header">
+                                      <h4 class="obs-title">Observations</h4>
+                                      <button class="obs-save-button">SAVE</button>
+                                    </div>
+                                    <textarea name="obs_done<%=e%>" class="obs" id="obs_done<%=e%>" cols="30" rows="10"><%=done[e]["obs"]%></textarea>
+                                  </div>
+                                  <div class="gray_rectangle"></div>
+                                  <p class="task-text"><%=done[e]["task"]%></p>
+                                    <%if (done[e]["deadline"].length == 10){%>
+                                      <p class="task-deadline"><%=new Date(done[e]["deadline"]).toUTCString().slice(5,16)%></p>
+                                      <p hidden class="task-deadline-YYYY-MM-DD"><%=done[e]["deadline"]%></p>
+                                    <%}%>
                                 </div>
-                                <textarea name="obs_done<%=o%>" class="obs" id="obs_done<%=o%>" cols="30" rows="10"><%=buffer_proj_m[o]["obs"]%></textarea>
+                                <hr class="done_line line">
                               </div>
-                              <div class="gray_rectangle"></div>
-                              <p class="task-text"><%=buffer_proj_m[o]["task"]%></p>
-                              <%if (buffer_proj_m[o]["deadline"]){%>
-                              <p class="task-deadline"><%=new Date(buffer_proj_m[o]["deadline"]+tmz_suffix_PH).toString().slice(4,15)%></p>
-                              <p hidden class="task-deadline-YYYY-MM-DD"><%=buffer_proj_m[o]["deadline"]%></p>
-                              <%}%>
-                            </div>
-                            <hr class="done_line line">
-                          </div>
-                          <%}%>                              
                           <%}%>
-                              
-                          <%if (projects_PH[m]["tasks_todo"].length > 0){%>
-                            <%let buffer_proj_mm = projects_PH[m]["tasks_todo"];%>                              
-                          <%for (n = 0; n < buffer_proj_mm.length; n++){%>
-                          <div class="task_with_lines">
-                            <hr class="todo_line line">
-                            <div class="specific_task todo">
-                              <div class="obs-box">
-                                <div class="obs-header">
-                                  <h4 class="obs-title">Observations</h4>
-                                  <button class="obs-save-button">SAVE</button>
+                        <%}%>
+
+                        <%if (projects[m]["tasks_todo"].length){%>
+                          <%let todo=projects[m]["tasks_todo"];%>
+                          <%for (n = 0; n < todo.length; n++){%>
+                            <div class="task_with_lines">
+                              <hr class="todo_line line">
+                              <div class="specific_task todo">
+                                <div class="obs-box">
+                                  <div class="obs-header">
+                                    <h4 class="obs-title">Observations</h4>
+                                    <button class="obs-save-button">SAVE</button>
+                                  </div>
+                                  <textarea name="obs_todo<%=n%>" class="obs" id="obs_todo<%=n%>" cols="30" rows="10"><%=todo[n]["obs"]%></textarea>
                                 </div>
-                                <textarea name="obs_todo<%=n%>" class="obs" id="obs_todo<%=n%>" cols="30" rows="10"><%=buffer_proj_mm[n]["obs"]%></textarea>
+                                <div class="gray_rectangle"></div>
+                                <p class="task-text"><%=todo[n]["task"]%></p>
+                                <%if (todo[n]["deadline"]){%>
+                                <p class="task-deadline"><%=new Date(todo[n]["deadline"]).toUTCString().slice(5,16)%></p>
+                                <p hidden class="task-deadline-YYYY-MM-DD"><%=todo[n]["deadline"]%></p>
+                                <%}%>
                               </div>
-                              <div class="gray_rectangle"></div>
-                              <p class="task-text"><%=buffer_proj_mm[n]["task"]%></p>
-                              <%if (buffer_proj_mm[n]["deadline"]){%>
-                              <p class="task-deadline"><%=new Date(buffer_proj_mm[n]["deadline"]+tmz_suffix_PH).toString().slice(4,15)%></p>
-                              <p hidden class="task-deadline-YYYY-MM-DD"><%=buffer_proj_mm[n]["deadline"]%></p>
-                              <%}%>
+                              <hr class="todo_line line">
                             </div>
-                            <hr class="todo_line line">
-                          </div>
                           <%}%>  
-                          <%}%>
+                        <%}%>
                         </div>
-                        <%if (projects_PH[m]["final_deadline"]){%>
-                          <%let buffer_ddl = new Date(projects_PH[m]["final_deadline"]+tmz_suffix_PH).toString();%>
-                        <div class="final_deadline-box"><%=(buffer_ddl.slice(3,10)+', '+buffer_ddl.slice(10,16))%></div>
+                        <%if (projects[m]["final_deadline"]){%>
+                          <%let buffer_ddl = new Date(projects[m]["final_deadline"]).toUTCString();%>
+                        <div class="final_deadline-box"><%=buffer_ddl.slice(5,16)%></div>
                         <%}%>
                       </div>
                       <%}%>                  
